--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -1,1 +1,18 @@
 <h1>Figure Name: <%= @figure.name %></h1>
+<h2>Figure Titles:</h2>
+<ul>
+<% @figure.titles.each do |title| %>
+  <li>
+    <%= title.name %>
+  </li>
+<% end %>
+</ul>
+
+<h2>Landmarks:</h2>
+<ul>
+<% @figure.landmarks.each do |landmark| %>
+  <li>
+    <%= landmark.name %>
+  </li>
+<% end %>
+</ul>
