--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -5,8 +5,9 @@
 
   <h2>Select Titles:</h2>
   <% @titles.each do |title| %>
-    <label for="title_<% title.id %>">title_<%= title.id %></label>
-    <input type="checkbox" id="title_<% title.id %>" name="figure[title_ids][]" value=<% title.id %>>
+    <label for="title_<%= title.id %>"><%= title.name %></label>
+    <input type="checkbox" id="title_<%= title.id %>" name="figure[title_ids][]" value=<%= title.id %>>
+    <br>
   <% end %>
 
   <h2>Create a new Title:</h2>
@@ -15,8 +16,8 @@
 
   <h2>Select Landmarks:</h2>
   <% @landmarks.each do |landmark| %>
-    <label for="landmark_<% landmark.id %>"><%= landmark.name %></label>
-    <input type="checkbox" id="landmark_<% landmark.id %>" name="figure[landmark_ids][]" value=<% landmark.id %>>
+    <label for="landmark_<%= landmark.id %>"><%= landmark.name %></label>
+    <input type="radio" id="landmark_<%= landmark.id %>" name="figure[landmark_ids][]" value=<%= landmark.id %>>
   <% end %>
 
   <h2>Create a new Landmark:</h2>
