--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -16,8 +16,8 @@
 
   <h2>Select Landmarks:</h2>
   <% @landmarks.each do |landmark| %>
-    <label for="landmark_<%= landmark.id %>">landmark_<%= landmark.id %></label>
-    <input type="radio" id="landmark_<%= landmark.id %>" name="figure[landmark_ids][]" value=<%= landmark.id %>>
+    <label for="landmark_<%= landmark.id %>"><%= landmark.name %></label>
+    <input type="checkbox" id="landmark_<%= landmark.id %>" name="figure[landmark_ids][]" value=<%= landmark.id %>>
   <% end %>
 
   <h2>Create a new Landmark:</h2>
