Automatically backed up by Learn

--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -1,5 +1,5 @@
 <h1>Edit Figure:</h1>
-<form action="/figures/<%= @figure.slug %>" method="POST">
+<form action="/figures/<%= @figure.id %>" method="POST">
   <input type="hidden" id="hidden" name="_method" value="patch">
 
   <label for="figure_name">Figure Name:</label>
