--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,6 +1,8 @@
 <h2>Create New Landmark</h2>
 
 <!-- add content here -->
+<label for="landmark_name">Landmark Name:</label>
+<input type="text" id="landmark_name" name="landmark[name]">
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
