Automatically backed up by Learn

--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -4,5 +4,8 @@
 <label for="landmark_name">Landmark Name:</label>
 <input type="text" id="landmark_name" name="landmark[name]">
 
+<label for="landmark_year_completed">Landmark Name:</label>
+<input type="text" id="landmark_year_completed" name="landmark[year_completed]">
+
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
