Automatically backed up by Learn

--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -4,7 +4,7 @@
 <label for="landmark_name">Landmark Name:</label>
 <input type="text" id="landmark_name" name="landmark[name]">
 
-<label for="landmark_year_completed">Landmark Name:</label>
+<label for="landmark_year_completed">Landmark Year Completed:</label>
 <input type="text" id="landmark_year_completed" name="landmark[year_completed]">
 
 <a class="button" href="/landmarks">Landmarks</a>
