Automatically backed up by Learn

--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,11 +1,15 @@
 <h2>Create New Landmark</h2>
 
 <!-- add content here -->
-<label for="landmark_name">Landmark Name:</label>
-<input type="text" id="landmark_name" name="landmark[name]">
+<form action="/landmarks" method="POST">
+  <label for="landmark_name">Landmark Name:</label>
+  <input type="text" id="landmark_name" name="landmark[name]">
 
-<label for="landmark_year_completed">Landmark Year Completed:</label>
-<input type="text" id="landmark_year_completed" name="landmark[year_completed]">
+  <label for="landmark_year_completed">Landmark Year Completed:</label>
+  <input type="text" id="landmark_year_completed" name="landmark[year_completed]">
+
+  <input type="submit" value="Create New Landmark">
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
