--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,9 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
+<form action="/landmarks/<%= @landmark.id %>" method="POST">
+  <input type="hidden" id="hidden" name="_method" value="patch"
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
