Automatically backed up by Learn

--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -2,7 +2,12 @@
 
 <!-- add content here -->
 <form action="/landmarks/<%= @landmark.id %>" method="POST">
-  <input type="hidden" id="hidden" name="_method" value="patch"
+  <input type="hidden" id="hidden" name="_method" value="patch">
+
+  <label for="landmark_name">Landmark Name:</label>
+  <input type="text" id="landmark_name" name="landmark[name]" placeholder=<%= landmark.name %>>
+
+  <input type="submit" value="Edit Landmark">
 </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
