--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -7,6 +7,9 @@
   <label for="landmark_name">Landmark Name:</label>
   <input type="text" id="landmark_name" name="landmark[name]" placeholder=<%= landmark.name %>>
 
+  <label for="landmark_year_completed">Landmark Year Completed:</label>
+  <input type="text" id="landmark_year_completed" name="landmark[year_completed]" placeholder=<%= landmark.year_completed %>>
+
   <input type="submit" value="Edit Landmark">
 </form>
 
