Automatically backed up by Learn

--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -5,10 +5,10 @@
   <input type="hidden" id="hidden" name="_method" value="patch">
 
   <label for="landmark_name">Landmark Name:</label>
-  <input type="text" id="landmark_name" name="landmark[name]" placeholder=<%= landmark.name %>>
+  <input type="text" id="landmark_name" name="landmark[name]" placeholder=<%= @landmark.name %>>
 
   <label for="landmark_year_completed">Landmark Year Completed:</label>
-  <input type="text" id="landmark_year_completed" name="landmark[year_completed]" placeholder=<%= landmark.year_completed %>>
+  <input type="text" id="landmark_year_completed" name="landmark[year_completed]" placeholder=<%= @landmark.year_completed %>>
 
   <input type="submit" value="Edit Landmark">
 </form>
