Automatically backed up by Learn

--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -4,11 +4,11 @@
 <form action="/landmarks/<%= @landmark.id %>" method="POST">
   <input type="hidden" id="hidden" name="_method" value="patch">
 
-  <label for="landmark_name">Landmark Name:</label>
-  <input type="text" id="landmark_name" name="landmark[name]" placeholder=<%= @landmark.name %>>
+  <label for="name">Landmark Name:</label>
+  <input type="text" id="name" name="landmark[name]" placeholder=<%= @landmark.name %>>
 
-  <label for="landmark_year_completed">Landmark Year Completed:</label>
-  <input type="text" id="landmark_year_completed" name="landmark[year_completed]" placeholder=<%= @landmark.year_completed %>>
+  <label for="year_completed">Landmark Year Completed:</label>
+  <input type="text" id="year_completed" name="landmark[year_completed]" placeholder=<%= @landmark.year_completed %>>
 
   <input type="submit" value="Edit Landmark">
 </form>
