--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,17 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
+<form action="/landmarks/<%= @landmark.id %>" method="POST">
+  <input type="hidden" id="hidden" name="_method" value="patch">
+
+  <label for="name">Landmark Name:</label>
+  <input type="text" id="name" name="landmark[name]" placeholder=<%= @landmark.name %>>
+
+  <label for="year_completed">Landmark Year Completed:</label>
+  <input type="text" id="year_completed" name="landmark[year_completed]" placeholder=<%= @landmark.year_completed %>>
+
+  <input type="submit" value="Edit Landmark">
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
